--- a/packages/mcu-ui-kit/.plop/componentName.sfc.tsx.hbs
+++ b/packages/mcu-ui-kit/.plop/componentName.sfc.tsx.hbs
@@ -1,15 +1,8 @@
-import React, { memo } from "react";
-
-type {{ properCase name }}Props = {
-  children: React.ReactNode;
-}
-
-const {{ properCase name }} = ({
-  children,
-}:{{ properCase name }}Props) => (
-  <div>
-    {children}
-  </div>
-);
-
-export default memo({{ properCase name }});
+import { memo } from "react"; type
+{{properCase name}}Props = { children: React.ReactNode; } const
+{{properCase name}}
+= ({ children, }:{{properCase name}}Props) => (
+<div>
+  {children}
+</div>
+); export default memo({{properCase name}});
